# ucode-marathon-main

./: terminal.c
Checkpoint00/vmaksym/t00/: mx_only_printable.c
Checkpoint00/vmaksym/t01/: mx_printstr.c
Checkpoint00/vmaksym/t02/: mx_isspace.c
Checkpoint00/vmaksym/t03/: mx_printint.c
Checkpoint00/vmaksym/t04/: mx_str_reverse.c
Checkpoint00/vmaksym/t05/: mx_strcmp.c
Checkpoint00/vmaksym/t08/: mx_atoi.c
Checkpoint01/vmaksym/t00/: mx_printerr.c
Checkpoint01/vmaksym/t01/: mx_print_args.c
Checkpoint01/vmaksym/t02/: mx_strnew.c
Checkpoint01/vmaksym/t03/: mx_strdup.c
Checkpoint01/vmaksym/t04/: mx_print_name.c
Checkpoint01/vmaksym/t06/: mx_nbr_to_hex.c
Checkpoint02/vmaksym/t00/: mx_printstr.c
Checkpoint02/vmaksym/t01/: mx_swap_char.c
Checkpoint02/vmaksym/t02/: mx_strcmp.c
Checkpoint02/vmaksym/t03/: mx_print_args.c
Checkpoint02/vmaksym/t04/: mx_strnew.c
Checkpoint02/vmaksym/t05/: mx_printint.c
Checkpoint02/vmaksym/t06/: mx_strdup.c
Checkpoint02/vmaksym/t07/: mx_atoi.c
Checkpoint02/vmaksym/t08/: mx_nbr_to_hex.c
Checkpoint02/vmaksym/t09/: read_file.c
Endgame/Reserve Copies/: main.c
Endgame/Stuff/: Makefile  main.c
Endgame/Stuff/SDL/src/hidapi/hidtest/: CMakeLists.txt  test.c
Endgame/endgame/: endgame
Race00/vmaksym/: mx_cub.c  mx_cube.c  mx_pyramid.c
Race01/vmaksym/: Makefile
Race03/vmaksym/: Makefile
Std Files/: mx_count_words.c  mx_is_mersenne.c  mx_is_prime.c  mx_isalpha.c  mx_islower.c  mx_popular_int.c  mx_pow.c  mx_reverse_case.c  mx_sort_arr_int.c  mx_str_reverse.c  mx_strncmp.c  mx_toupper.c
(+898 files in other folders)
